# crypto-rng-verification

./: Cargo.toml  README.md
src/: main.rs  monte_carlo_integration.rs  rng_trait.rs
src/rng/: acorn.rs  aes128.rs  arc4.rs  chacha20.rs  fortuna.rs  gjrand.rs  hc128.rs  isaac.rs  jitter.rs  jsf64.rs  lcg.rs  lehmer.rs  mersenne_twister.rs  mod.rs  msws.rs  multiply_with_carry.rs  pcg64.rs  philox.rs  randen.rs  ranluxpp.rs  romu.rs  rule30.rs  sapparot64.rs  sfc64.rs  shishua.rs  splitmix64.rs  velox3b.rs  wyrand.rs  xorshift128p.rs  xoshiro256ss.rs  yarrow.rs
