[package]
name = "crypto-rng-verification"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["oligami <nziq53@gmail.com>"]
keywords = ["ffi", "random", "ranluxpp", "ranlux++", "ranlux"]
description = "A library for verifying the randomness of a random number generator."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# support
rayon = "1.8"
parking_lot = "0.12"

# output
serde = "1.0"
serde_json = "1.0"

# UI
ratatui = "0.25"
crossterm = "0.27"

# PRNG
arc4 = "0.1.0"
rand_chacha = "0.3.1"
yarrow-rs = "0.1.0"
mersenne-twister-m = "0.3.0"
shishua_rs = { version = "0.1.0", git = "https://github.com/oligamiq/shishua_rs" }
romu = "0.5.1"
aes-prng = "0.2.0"
rand_xoshiro = "0.6.0"
xorshift = "0.1.3"
rust-crypto = "0.2"
park-miller-carta-prng = { version = "0.1.3", git = "https://github.com/oligamiq/park-miller-carta-prng"}
rand_hc = "0.3.2"
nanorand = "0.7.0"
ranluxpp-rs = "0.3.0"
rand_isaac = "0.3.0"
small_rngs = { version = "0.0.1", git = "https://github.com/oligamiq/small-rngs" }
rand_jitter = "0.4.0"
randen = "0.0.0" # use i128 so nightly
philox = { version = "0.0.0", git = "https://github.com/dominikwerder/philox" }
acorn_prng = "3.0.1"
r30_rs = "0.1.0"
prandom = "0.1.0"
crypto_api_osrandom = "0.2.0"
rand = { version = "0.8.5" }
anyhow = "1.0.79"
